12/9新增政治，及部分笔记修正

--- a/pages/C02计算机组成原理.md
+++ b/pages/C02计算机组成原理.md
@@ -1,6 +1,6 @@
 <h1 align="center">计算机组成原理</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-12-09</div>
 
 ## 计算机发展与结构
 
@@ -30,7 +30,7 @@
 | M0微指令机器 | 微指令机器  | 硬件  | CPU微指令，电路实现    |
 | M1传统机器  | 机器语言机器 | 硬件  | 1条机器语言对应n条微指令  |
 | M2虚拟机器  | 操作系统机器 | 软件  | \              |
-| M3虚拟机器  | 汇编语言机器 | 软件  | 1条汇编语言对应n条机器语言 |
+| M3虚拟机器  | 汇编语言机器 | 软件  | 1条汇编语言对应1条机器语言 |
 | M4虚拟机器  | 高级语言机器 | 软件  | 1条高级语言对应n条汇编语言 |
 
 | 转换程序 | 说明                   | 例如            |
@@ -563,9 +563,9 @@
 | 间址周期 | Ad(IR)→MAR，1→R，M(MAR)→MDR，MDR→IR                   |
 | 中断周期 | a→MAR，(PC)→MDR，1→W，MDR→M(MAR)，向量地址→PC              |
 
-        **更多周期**：计算周期、访存周期等等
+        **更多周期**：执行周期、访存周期等等
 
-        **周期控制**：标志触发器FE、IND、EX、INT
+        **周期控制**：标志触发器FE(fetch)、IND(in direct)、EX(executive)、INT(interrupt)
 
 | 指令执行方案 | 说明                   |
 |:------:|:--------------------:|
@@ -827,12 +827,12 @@
 | LRU近期最少使用 | 局部统计法，统计最近一段时间的访问次数，替换最少访问的出去，算法位要求大，同时需要排序。 |
 | LFU频繁使用最少 | 全局统计法，统计总访问次数，替换最少访问的出去，算法位要求大，同时需要排序。       |
 
-| 写策略   | 说明                                         |
-|:-----:|:------------------------------------------:|
-| 写回法   | 命中时，只写Cache，等替换出去时再考虑写回主存，需**1位脏位**标记是否修改过 |
-| 写分配法  | 不命中时，读主存到Cache，后续同写回法                      |
-| 全写法   | 命中时，同时写Cache和主存                            |
-| 非写分配法 | 不命中时，直接通过写缓存写回去主存                          |
+| 写策略   | 说明                                            |
+|:-----:|:---------------------------------------------:|
+| 写回法   | 命中时，只写Cache，等替换出去时再考虑写回主存，需**1位脏位**标记是否修改过。一一 |
+| 写分配法  | 不命中时，读主存到Cache，后续同写回法。一一                      |
+| 全写法   | 命中时，同时写Cache和主存。二                             |
+| 非写分配法 | 不命中时，直接通过写缓存写回去主存。二                           |
 
 注：实际应用搭配使用，L1缓存全写法，L2缓存写回法
 
@@ -960,7 +960,7 @@
 | 分辨率       | 像素点个数                                 |
 | 灰度级       | 能够表示不同颜色的位数                           |
 | 刷新率       | 由VRAM最大带宽支持                           |
-| 显示存储器VRAM | $VRAM容量＝分辨率×灰度级位数$,$VRAM带宽＝VRAM容量×帧频$ |
+| 显示存储器VRAM | $VRAM容量＝分辨率×灰度级位数$，$VRAM带宽＝VRAM容量×帧频$ |
 
 注：VRAM容量是表示一张画面的存储容量，VRAM带宽是要满足某帧率的显示所需的传输速度。
 
