--- a/pages/M02微积分一.md
+++ b/pages/M02微积分一.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分一</h1>
 
-<div align="right">最近更新时间：2023-09-30</div>
+<div align="right">最近更新时间：2023-12-9</div>
 
 ## 集合
 
@@ -59,6 +59,7 @@
 | 水平渐近线     | $\lim_{x→\infty}f(x)＝a$                                  |
 | 垂直渐近线     | $\lim_{x→x_0}f(x)＝\infty$                                |
 | 斜渐近线（分左右） | $\lim_{x→\infty}\frac{f(x)}x＝a，\lim_{x→\infty}f(x)-ax＝b$ |
+| 截距        | $y=ax+b$与轴交点的非零坐标，有正负                                    |
 | 单调增       | $f'(x)>0$                                                |
 | 单调减       | $f'(x)<0$                                                |
 | 极大值       | 左单调增，右单调减                                                |
@@ -268,6 +269,23 @@ $$
 
 **性质**：$f(x)=g(x)h(x)=[g(x)展开]×[h(x)展开]$
 
+        **含拉格朗日余项的泰勒展开**
+
+$$
+\begin{align*}
+f(x)&=f(x_0)+\frac{f'(x_0)}{1!}(x-x_0)
++\frac{f''(x_0)}{2!}(x-x_0)^2
++...
++\frac{f^{(n)}(x_0)}{n!}(x-x_0)^n\\
+&=f(x_0)+\frac{f'(\epsilon_1)}{1!}(x-x_0)
+（\epsilon_1于x和x_0之间，拉格朗日中指定理）
+\\
+&=f(x_0)+\frac{f'(x_0)}{1!}(x-x_0)
++\frac{f''(\epsilon_2)}{2!}(x-x_0)^2
+（\epsilon_2于x和x_0之间，拉格朗日中指定理推广）
+\end{align*}
+$$
+
 ---
 
 ## 连续
@@ -403,12 +421,20 @@ $$
 
 ### 微分中值定理
 
-| 微分中值定理   | 概念                                                                                                              | 人话                                    |
-|:--------:|:---------------------------------------------------------------------------------------------------------------:|:-------------------------------------:|
-| 费马定理     | $f(x)$在$x_0$领域有定义，在$x_0$处可导，领域内若$f(x)≤f(x_0)$，则$f'(x_0)＝0$                                                      | 某点连续是极值，该点导数为0                        |
-| 罗尔定理     | $f(x)$若在$[a,b]$连续，且在$(a,b)$可导，且$f(a)＝f(b)$，则一定存在点$x_0$，$f'(x_0)＝0$                                              | 两个相等点之间连续，肯定一个点的导数＝0                  |
-| 拉格朗日中值定理 | $f(x)$若在$[a,b]$连续，且在$(a,b)$可导，且$f(a)＝f(b)$，则一定存在点$x_0$，$f'(x_0)＝\frac{f(b)-f(a)}{b-a}$                          | 两个点之间连续，肯定有一个点的导数＝两点直线连接斜率            |
-| 柯西中值定理   | 若$f(x)、g(x)$在$[a,b]$连续，且在$(a,b)$可导，且$g'(x)$不为0，则存在一点$x_0$，$\frac{f'(x_0)}{g'(x_0)}＝\frac{f(b)-f(a)}{g(b)-g(a)}$ | 两个函数在同两个点之间连续，肯定有一个点的两函数导数比＝两函数在两点值差比 |
+**概念**：导数存在定理
+
+| 微分中值定理   | 概念                                                                                                            | 人话                         |
+|:--------:|:-------------------------------------------------------------------------------------------------------------:|:--------------------------:|
+| 费马定理     | $f(x)$在$x_0$领域有定义，在$x_0$处可导，领域内若$f(x)≤f(x_0)$，则$f'(x_0)＝0$                                                    | 某点连续是极值，该点导数为0             |
+| 罗尔定理     | $f(x)$若在$[a,b]$连续，且在$(a,b)$可导，且$f(a)＝f(b)$，则存在$x_0$使$f'(x_0)＝0$                                               | 两个相等点之间连续，肯定一个点的导数＝0       |
+| 拉格朗日中值定理 | $f(x)$若在$[a,b]$连续，且在$(a,b)$可导，且$f(a)＝f(b)$，则存在$x_0$使$f'(x_0)＝\frac{f(b)-f(a)}{b-a}$                           | 两个点之间连续，肯定有一个点的导数＝两点直线连接斜率 |
+| 柯西中值定理   | 若$f(x)、g(x)$在$[a,b]$连续，且在$(a,b)$可导，且$g'(x)$不为0，则存在$x_0$使$\frac{f'(x_0)}{g'(x_0)}＝\frac{f(b)-f(a)}{g(b)-g(a)}$ | 两个函数的拉格朗日比                 |
+
++ 函数存在定理
+  
+  零点定理：在$(a,b)$连续，$f(a)f(b)＜0$，则存在$x_0$使$f(x_0)=0$
+  
+  介值定理：在$(a,b)$连续，则存在$x_0$使$f(x_0)=\frac{f(a)+f(b)}{2}$
 
 ---
 
@@ -422,20 +448,22 @@ $$
 \int f'(x)dx=f(x)+C
 $$
 
-       即**求导的逆向过程**，注意常数，定义域。
+       即**求导的逆向过程**，注意常数，定义域。$f(x)$是$f'(x)$的原函数。
 
 |               | 性质（不定积分运算法则）                                                |
 |:-------------:|:-----------------------------------------------------------:|
 | 数乘内外提         | $\int kf(x)dx=k\int f(x)dx$                                 |
 | 先加减后积分，先积分后加减 | $\int f(x)+g(x)+o(x)dx=\int f(x)dx+\int g(x)dx+\int o(x)dx$ |
 
-| 函数            | 不定积分基本公式                 |
-|:-------------:|:------------------------:|
-| $0$           | $C$                      |
-| $x^a$         | $\frac{1}{a+1}x^{a+1}+C$ |
-| $\frac{1}{x}$ | $\ln x+C$                |
-| $a^x$         | $\frac{1}{\ln a}a^x+C$   |
-| 三角函数略         | 三角函数略                    |
+| 函数                   | 不定积分基本公式                 |
+|:--------------------:|:------------------------:|
+| $0$                  | $C$                      |
+| $x^a$                | $\frac{1}{a+1}x^{a+1}+C$ |
+| $\frac{1}{x}$        | $\ln x+C$                |
+| $a^x$                | $\frac{1}{\ln a}a^x+C$   |
+| 三角函数略                | 三角函数略                    |
+| $\cot x$             | $\ln\vert\sin x\vert+C$  |
+| $\cot^2 x=\csc^2x-1$ | $-\cot x-x+C$            |
 
 + 有分母的用办法分开：直接上下同除、平方和、平方差。
 
