--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分二</h1>
 
-<div align="right">最近更新时间：2023-09-30</div>
+<div align="right">最近更新时间：2023-12-9</div>
 
 ## 多元函数
 
@@ -342,6 +342,32 @@ b\sin\theta  &  br\cos\theta\\
 
 ---
 
+### 旋转体的体积和表面积
+
+| 概念  | 公式                                     | 解释              |
+|:---:|:--------------------------------------:|:---------------:|
+| 体积  | $2\pi\iint_{被旋转区域D}{区域每点到旋转轴的距离r}dxdy$ | 区域**积旋转周长**得体积  |
+| 表面积 | $2\pi\iint_{被旋转线段L}{区域每点到旋转轴的距离r}ds$   | 线段**积旋转周长得**表面积 |
+
++ 上述公式的**前提**：被旋转的对象不可穿过旋转轴
+
++ $ds=\sqrt{1+{y'}^2}dx=\sqrt{{x_t'}^2+{y_t'}^2}dt$，即**曲线长公式**
+  
+  $$
+  \begin{align*}
+由勾股定理得线段微分&ds^2=dx^2+dy^2①\\
+&y'=\frac{dy}{dx},dy=y'dx②\\
+②代入①得&ds^2=dx^2+(y'dx)^2\\
+化简得&ds=\sqrt{1+{y'}^2}dx\\
+&x_t'=\frac{dx}{dt},dx=x_t'dt③\\
+&y_t'=\frac{dy}{dt},dy=y_t'dt④\\
+③④代入①得&ds^2=(x_t'dt)^2+(y_t'dt)^2\\
+化简得&ds=\sqrt{{x_t'}^2+{y_t'}^2}dt\\
+\end{align*}
+  $$
+
+---
+
 ## 三重积分
 
         **概念**：函数$Z=f(x,y)$中，其对应的密度函数$Q=g(x,y,z)$
@@ -422,7 +448,7 @@ $$
 
 + $r=4$时为球面、$\theta=4$时为半平面，$\phi=4$时为圆锥面
 
-**例1：柱面坐标，圆柱面**：$\Omega$为：$x^2＋y^2＝z，z≤4$，求$\iiint_{\Omega} g(x,y,z)dxdydz$
+**例1：柱面坐标，圆截面**：$\Omega$为：$x^2＋y^2＝z，z≤4$，求$\iiint_{\Omega} g(x,y,z)dxdydz$
 
 1. **换元**：$x=r\cos\theta，y=r\sin\theta，z=z$
 
@@ -474,7 +500,7 @@ $$
 
 ---
 
-**例2：柱面坐标，椭圆柱面**：$\Omega$为：$\frac{x^2}{a^2}＋\frac{y^2}{b^2}＝z，z≤4$，求$\iiint_{\Omega} g(x,y,z)dxdydz$
+**例2：柱面坐标，椭圆截面**：$\Omega$为：$\frac{x^2}{a^2}＋\frac{y^2}{b^2}＝z，z≤4$，求$\iiint_{\Omega} g(x,y,z)dxdydz$
 
 1. **换元**：$x=ar\cos\theta，y=br\sin\theta，z=0$
 
@@ -602,6 +628,24 @@ b\sin\phi\sin\theta  &  br\cos\phi\sin\theta  &  br\sin\phi\cos\theta
    被积$g(x,y,z)$**对应为**：$g(r,\phi,\theta)J(r,\phi,\theta)=g(r,\phi,\theta)abcr^2\sin\phi$
 
 ---
+
+### 常见函数图形
+
+| 函数                                                  | 类别   | 图形                      |
+|:---------------------------------------------------:|:----:|:-----------------------:|
+| $x^2＋y^2＝r^2$                                       | 圆    | 圆心(0,0)                 |
+| $(x-3)^2＋（y-5)^2＝r^2$                               | 圆    | 圆心(3,5)                 |
+| $\frac{x^2}{a^2}＋\frac{y^2}{b^2}＝1$                 | 椭圆   | 圆心(0,0)，对称轴x轴、y轴        |
+| $\frac{(x-3)^2}{a^2}＋\frac{(y-5)^2}{b^2}＝1$         | 椭圆   | 圆心(3,5)，对称轴x轴、y轴        |
+| $x^2＋y^2-xy＝4$                                      | 椭圆   | 圆心(0,0)，对称轴y=x、y=-x，大小4 |
+| $x^2＋y^2＝1，0≤z≤4$                                   | 柱面坐标 | 圆柱                      |
+| [$x^2＋y^2＝z，0≤z≤4$]()                               | 柱面坐标 | 圆锥                      |
+| $\frac{x^2}{a^2}＋\frac{y^2}{b^2}＝z，0≤z≤4$           | 柱面坐标 | 椭圆锥                     |
+| $x^2＋y^2+z^2=r^2$                                   | 球面坐标 | 球                       |
+| $\frac{x^2}{a^2}＋\frac{y^2}{b^2}+\frac{z^2}{c^2}=1$ | 球面坐标 | 橄榄球                     |
+| $\frac{x^2}{a^2}-\frac{y^2}{b^2}＝1$                 | 双曲线  | ) (                     |
+| $y=\frac{k}{x}$                                     | 双曲线  | 一三象限                    |
+| $y=\frac{k}{x}+ax$                                  | 双曲线  | 一三象限，对钩函数，渐近线y=ax       |
 
 ## 积分关系定理
 
@@ -841,8 +885,8 @@ $$
 | \    | \                                                                                                                         | \                                                                                                                                                                                                                                    |
 | 方向向量 | $l=(i,j)$                                                                                                                 | $l=(i,j,k)$                                                                                                                                                                                                                          |
 | 向量长度 | $\|l\|=\sqrt{i^2＋j^2}$                                                                                                    | $\|l\|=\sqrt{i^2＋j^2＋k^2}$                                                                                                                                                                                                           |
-| 方向余弦 | $(\cos\alpha,\cos\beta)=(\frac{i}{\|l\|},\frac{j}{\|l\|},\frac{k}{\|l\|})$                                                | $(\cos\alpha,\cos\beta,\cos\gamma)=(\frac{i}{\|l\|},\frac{j}{\|l\|},\frac{k}{\|l\|})$                                                                                                                                                |
-| 方向导数 | $(f_x'，f_y')×(\cos\alpha,\cos\beta)$                                                                                      | $(f_x'，f_y'，f_z')×(\cos\alpha,\cos\beta,\cos\gamma)$                                                                                                                                                                                 |
+| 方向余弦 | $(\cos\alpha,\cos\beta)=(\frac{i}{\|l\|},\frac{j}{\|l\|})$                                                                | $(\cos\alpha,\cos\beta,\cos\gamma)=(\frac{i}{\|l\|},\frac{j}{\|l\|},\frac{k}{\|l\|})$                                                                                                                                                |
+| 方向导数 | $(f_x'，f_y')·(\cos\alpha,\cos\beta)$                                                                                      | $(f_x'，f_y'，f_z')·(\cos\alpha,\cos\beta,\cos\gamma)$                                                                                                                                                                                 |
 | \    | \                                                                                                                         | \                                                                                                                                                                                                                                    |
 | 封闭区域 | $D$是$f(x,y)$围成的封闭区域                                                                                                       | $\Omega$是$f(x,y,z)$围成的封闭区域                                                                                                                                                                                                           |
 | 密度函数 | $\rho(x,y)$                                                                                                               | $\rho(x,y,z)$                                                                                                                                                                                                                        |
@@ -850,6 +894,7 @@ $$
 | 质心   | $(\frac{\iint_Dx\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma},\frac{\iint_Dy\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma})$ | $(\frac{\iiint_\Omega x\rho(x,y,z)d\sigma}{\iiint_\Omega \rho(x,y,z)d\sigma},\frac{\iiint_\Omega y\rho(x,y,z)d\sigma}{\iiint_\Omega \rho(x,y,z)d\sigma},\frac{\iiint_\Omega z\rho(x,y,z)d\sigma}{\iiint_\Omega \rho(x,y,z)d\sigma})$ |
 | 面积   | $\iint_D1d\sigma$                                                                                                         | \                                                                                                                                                                                                                                    |
 | 体积   | \                                                                                                                         | $\iiint_\Omega 1d\sigma$                                                                                                                                                                                                             |
+| 弧长   | $\int_{于x的投影}\sqrt{1+(y_x')^2}dx$                                                                                         | \                                                                                                                                                                                                                                    |
 | 表面积  | \                                                                                                                         | $\iint_{于xoy的投影面}\sqrt{1+(z_x')^2+(z_y')^2}dxdy$                                                                                                                                                                                     |
 
 + **法向量**是对于**某切点**的概念。
