fit for PageServeFail2

--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -639,7 +639,7 @@ b\sin\phi\sin\theta  &  br\cos\phi\sin\theta  &  br\sin\phi\cos\theta
 | $\frac{(x-3)^2}{a^2}＋\frac{(y-5)^2}{b^2}＝1$         | 椭圆   | 圆心(3,5)，对称轴x轴、y轴        |
 | $x^2＋y^2-xy＝4$                                      | 椭圆   | 圆心(0,0)，对称轴y=x、y=-x，大小4 |
 | $x^2＋y^2＝1，0≤z≤4$                                   | 柱面坐标 | 圆柱                      |
-| [$x^2＋y^2＝z，0≤z≤4$]()                               | 柱面坐标 | 圆锥                      |
+| $x^2＋y^2＝z，0≤z≤4$                                   | 柱面坐标 | 圆锥                      |
 | $\frac{x^2}{a^2}＋\frac{y^2}{b^2}＝z，0≤z≤4$           | 柱面坐标 | 椭圆锥                     |
 | $x^2＋y^2+z^2=r^2$                                   | 球面坐标 | 球                       |
 | $\frac{x^2}{a^2}＋\frac{y^2}{b^2}+\frac{z^2}{c^2}=1$ | 球面坐标 | 橄榄球                     |
