fit for PageServeFail3

--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -351,7 +351,7 @@ b\sin\theta  &  br\cos\theta\\
 
 + 上述公式的**前提**：被旋转的对象不可穿过旋转轴
 
-+ $ds=\sqrt{1+{y'}^2}dx=\sqrt{{x_t'}^2+{y_t'}^2}dt$，即**曲线长公式**
++ $ds=\sqrt{1+{y'}^2}dx=\sqrt{x_t'^2+y_t'^2}dt$，即**曲线长公式**
   
   $$
   \begin{align*}
@@ -362,7 +362,7 @@ b\sin\theta  &  br\cos\theta\\
 &x_t'=\frac{dx}{dt},dx=x_t'dt③\\
 &y_t'=\frac{dy}{dt},dy=y_t'dt④\\
 ③④代入①得&ds^2=(x_t'dt)^2+(y_t'dt)^2\\
-化简得&ds=\sqrt{{x_t'}^2+{y_t'}^2}dt\\
+化简得&ds=\sqrt{x_t'^2+y_t'^2}dt\\
 \end{align*}
   $$
 
